assets/css/overrides.css
/**
 * Overriding original .less specifications
 */
p + p {
    margin-top: 0;
    text-indent: 0;
}

.navigation-wrapper {
    text-transform: none;
    font-weight: normal;
    font-size: 14px;

    border-bottom: 1px solid #eee;
    background: #f3f3f3;
    padding: 20px 0;
}

.site-name, .top-navigation {
    margin-bottom: 0;
}

.article-wrap p > a, .article-wrap li > a,
.article-wrap p > a:hover, .article-wrap li > a:hover {
    border: none;
}

blockquote {
    margin-left: -24px;
    border-left: 4px solid #278601;
}

.meta, .comments-link, .comments-link:hover, .view-all-posts {
    color: #999;
    font-size: 13px;
}

.article-author-side .bio-photo {
    border-radius: 8px;
    -webkit-border-radius: 8px;
    border: 4px solid white;
    position: relative;
    top: -4px;
    left: -4px;
}

.post, .page {
    margin-left: 320px;
    margin-bottom: 40px;
    width: 50%;
}

.top-navigation li a {
    color: #737373;
    border-bottom: 2px solid transparent;
    padding: 21px 0;
}

.top-navigation li a:hover {
    transition: border-color .218s;
    /* border-color: #427fed; */
    color: #262626;
}

/**
 * Site-wide hyperlinks
 */
/* TODO: See of the chance not to use `article` and replace with a class */
article a, article a:visited, article a:hover, .footer-wrap a, .footer-wrap a:hover {
    color: #427fed;
    cursor: pointer;
    text-decoration: none;
}

article a:hover, .footer-wrap a:hover {
    text-decoration: underline;
}

/**
 * Site-wide font sizes
 */
article {
    font-family: 'Lora', serif;
}

h1, h2, h3, h4, h5, h6 {
    font-weight: normal;
}

h1, h2, h3, h4, h5, h6,
body, .sans-serif {
    font-family: 'Roboto', sans-serif;
    text-rendering: optimizeLegibility;
}

.post-title {
    letter-spacing: -0.04em;
    line-height: 1.1;
    margin-top: 0;
    margin-bottom: 10px;
    font-weight: 300;
    font-size: 30px;
    color: #262626;
}

body {
    color: #444444;
    font-size: 16px;
    line-height: 1.5;
    letter-spacing: 0.01rem;
    -webkit-font-smoothing: antialiased;
}

/**
 * Code font sizes
 */
.highlight {
    background-color: #f8f8f8;
    border: 1px solid #ddd;
    overflow: auto;
    padding: 6px 10px;
    border-radius: 3px;
}

.highlight pre {
    font-size: 12px;
    line-height: 19px;
    padding: 0;
    max-height: 400px;
    -webkit-font-smoothing: auto;
}

code {
    font-family: Consolas, 'Liberation Mono', Courier, monospace;
    font-size: 13px;
}

p code {
    color: #278601;
    background-color: #f1f6ef;
    padding: 2px 4px;
    white-space: nowrap;
    font-size: 14px;
    margin: 0;
    line-height: 24px;
}

/**
 * Posts
 */
.headline-wrap {
    margin-bottom: 26px;
}

/* Post breadcrumb separator */
.meta span:not(:last-child):after {
    content: '/';
    padding: 0 4px;
}

.navigation-wrapper + .content-wrap {
    margin-top: 32px;
}

/* Feature Image */
.feature-image {
    position: relative;
    padding-bottom: 32px;
}

.feature-image--cover-photo {
    background-size: cover;
    background-position: center;
    padding-top: 18%;
    height: 100px;
    position: relative;
}

.feature-image--cover-photo .overlay {
    position: absolute;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    background: url('/assets/images/cover_mask.png');
    z-index: 1;
}

.feature-image--credit {
    display: block;
    width: 75%;
    text-align: right;
    font-size: 11.5px;
    font-style: italic;
    color: #80807e;
    line-height: 32px;
    position: absolute;
    bottom: 0;
}

/* Content Wrap */
.content-wrap {
    position: relative;
    min-height: 550px;
}

.content-wrap-has-feature-image .biography {
    margin-top: -100px;
    position: relative;
    z-index: 2;
}

/* Article Author Bio */
.biography {

}

.biography-is-fixed {
    position: fixed !important;
    margin-top: 0 !important;
    top: 40px;
}

/* Footer */
.footer-wrap {
    font-size: 11px;
    position: absolute;
    bottom: 0;
    left: 54px;
    width: 190px;
}

/* Tweet Post Widget */
.twitter-popup {
    z-index: 100;
    border-radius: 4px;
    border: 1px solid #ccc;
    background: #fff;
    width: 300px;
    position: fixed;
    bottom: 25px;
    right: 25px;
    box-shadow: 0 2px 0 rgba(0, 0, 0, 0.08);
    position: fixed;
    display: none;
    opacity: 0;
}

.twitter-popup-is-visible {
    display: block;
    opacity: 1;
    transition: opacity 1s ease-in-out;
    -moz-transition: opacity 1s ease-in-out;
    -webkit-transition: opacity 1s ease-in-out;
}

.twitter-popup .twitter-popup--close-btn {
    float: right;
    margin-right: 6px;
    margin-top: 3px;
    font-size: 20px;
    color: #BBB;
    text-decoration: none;
}

.twitter-popup .twitter-popup--close-btn:hover {
    color: #262626;
}

.twitter-popup .close_it_bro {
    position: absolute;
    top: 0;
    right: 10px;
    cursor: pointer;
}

.twitter-popup .twitter-popup--content {
    padding: 4px 12px 0;
    margin-bottom: 7px;
    font-size: 12px;
    line-height: 1.4;
}

.twitter-popup h4 {
    color: #2c251d;
    line-height: 1.1;
    margin: 11px 12px 3px;
}

.twitter-popup p {
    margin-bottom: 8px;
}

.twitter-popup .twitter-popup--footer {
    border-top: 1px solid #ddd;
    padding: 11px 12px 5px;
    border-bottom-left-radius: 4px;
    border-bottom-right-radius: 4px;
    background: #f5f5f5;
}

.twitter-popup .twitter-popup--footer img {
    float: right;
    position: relative;
    top: -4px;
    width: 28px;
    height: 28px;
    border-radius: 2px;
}

